--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "passgen.js",
   "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+   
   
+}
 }
