--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "passgen.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-   
-  
+    "ios": "react-native run-ios",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "test:e2e":"npm run test",
+    "test:e2e:build":"npm run build"  
 }
 }
